# mcp_getting_started

./: README.md  pyproject.toml
src/: .env  call_gemini.py  file_system.py  flle_system_client.py  gemini_client.py  http_test.py  langchain_test.py  mcp_cli.py  mcp_client_advance.py  mcp_client_with_file_system.py  rag_demo.py  test_gemini.py  web_search.py
