[project]
name = "mcp-getting-started"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "langchain>=1.0.0a14",
    "mcp[cli]>=1.15.0",
    "openai>=1.109.1",
    "uvicorn>=0.37.0",
]
